stylesheets/_component.lists.scss
.list--naked {
  list-style-type: none;
}

.list--naked li.is-active {
    background-color: color(primary);
    border-radius: $border-radius;
    margin-left: -5px;
    padding-left: 5px;

    &,
    & > a {
        color: color(primary, alt);
        text-decoration: none;
    }
}

.list--inline {
  li {
    display: inline-block;
  }
}

.list--timeline {
    border-left: 2px solid color(border);
    list-style: none;

    li {
        margin-bottom: 1em;
        padding-left: 15px;
        position: relative;
    }

    li::before {
        background-color: color(background);
        border: 2px solid color(border);
        border-radius: 50px;
        content: '';
        display: block;
        left: -8px;
        position: absolute;
        top: 4px;
        height: 10px;
        width: 10px;
    }

    a {
        text-decoration: none;
    }

    .active {
        font-family: $font-family-regular;

        &::before {
            border-color: color(primary);
        }
    }
}

